--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Señor de la Divina Misericordia</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./CSS/styles.css">
+    <link rel="stylesheet" href="./CSS/footer.css">
 </head>
 <body>
     <header class="bg-dark text-white text-center p-3">
@@ -47,18 +48,51 @@
         <section class="my-5 text-center">
             <h3 class="text-xl">Dirección:</h3>
             <p>JR. Ancash Nro. 1640 D - Lima</p>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3902.0067199278856!2d-77.01310712632709!3d-12.043058041828933!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c8aa78afc39b%3A0xdf5ae0e57552ffc7!2sJr.%20%C3%81ncash%201640%2C%20Lima%2015003!5e0!3m2!1ses-419!2spe!4v1723603188973!5m2!1ses-419!2spe"
-                width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div class="map-container">
+                <center><iframe
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7804.014812626143!2d-77.0149632!3d-12.0430108!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c8aa78afc39b%3A0xdf5ae0e57552ffc7!2sJr.%20%C3%81ncash%201640%2C%20Lima%2015003!5e0!3m2!1ses-419!2spe!4v1723584841684!5m2!1ses-419!2spe"
+                    width="400"
+                    height="300"
+                    style="border:0;"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe></center>
+            </div>
         </section>
     </main>
 
-    <footer class="bg-gray-800 text-white text-center p-3">
-        <p>Propietarios: Carmen Rosa Llanos, Karlhos Torrejón</p>
-        <p>Correo: carmenrosallanoslopez@gmail.com | karlhosyadhira@gmail.com</p>
-        <p>Teléfonos: 972114829 | 992144706</p>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-column">
+                <br><br>
+                <h2>Marmolería "Señor de la divina Misericordia"</h2>
+            </div>
+            <div class="footer-column">
+                <p><strong>Contactanos:</strong></p>
+                <p>Carmen Rosa Llanos<br>
+                <a href="mailto:carmenrosallanoslopez@gmail.com">carmenrosallanoslopez@gmail.com</a><br>
+                <strong>Cel:</strong> <a href="tel:+51972114829">972114829</a></p>
+                
+                <p>Karlhos Torrejón<br>
+                <a href="mailto:karlhosyadhira@gmail.com">karlhosyadhira@gmail.com</a><br>
+                <strong>Cel:</strong> <a href="tel:+51992144706">992144706</a></p>
+            </div>
+            <div class="footer-column">
+                <br>
+                <p><strong>Dirección:</strong> JR. Ancash Nro. 1640 D - Lima</p>
+                <br><br><br>
+                <p>Síguenos en:</p>
+                <a href="https://wa.me/51972114829" target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://www.facebook.com/" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                <a href="tel:+51972114829" aria-label="Teléfono"><i class="fas fa-phone"></i></a>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>© 2024 Marmolería "Señor de la divina Misericordia" - Todos los Derechos Reservados.</p>
+        </div>
     </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://kit.fontawesome.com/812c8ee19a.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
