--- a/index.html
+++ b/index.html
@@ -8,14 +8,21 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./CSS/styles.css">
     <link rel="stylesheet" href="./CSS/footer.css">
+    <link rel="stylesheet" href="./CSS/navbar.css">
 </head>
 <body>
-    <header class="bg-dark text-white text-center p-3">
-        <h1>Señor de la Divina Misericordia</h1>
-        <nav>
-            <a href="index.html" class="text-white mx-3">Inicio</a>
-            <a href="catalog.html" class="text-white mx-3">Catálogo</a>
-        </nav>
+    <header>
+        <div class="container">
+            <h1>Marmolería Arte y Diseño</h1>
+            <nav>
+                <ul>
+                    <li><a href="#inicio">Inicio</a></li>
+                    <li><a href="#servicios">Servicios</a></li>
+                    <li><a href="./catalogo.html">Galería</a></li>
+                    <li><a href="#contacto">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <section class="my-5 d-flex flex-column flex-md-row align-items-center text-center text-md-start section-centrada animacion">
