--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
     <section class="my-5 d-flex flex-column flex-md-row align-items-center text-center text-md-start section-centrada animacion">
         <div class="container d-flex flex-md-row-reverse align-items-center">
-            <div class="col-md-6 my-4 my-md-0">
-                <img src="img/santito2.jpeg" alt="Equipo de trabajo" class="img-fluid rounded shadow img-agrandada img-animacion">
+            <div class="col-md-5 my-4 my-md-0">
+                <img src="img/Logo.png" alt="Equipo de trabajo" class="img-fluid rounded img-agrandada img-animacion">
             </div>
             <div class="col-md-6 text-mejorado">
                 <h3 class="text-xl">Quiénes somos</h3>
