--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./CSS/styles.css">
     <link rel="stylesheet" href="./CSS/footer.css">
     <link rel="stylesheet" href="./CSS/navbar.css">
+    <link rel="stylesheet" href="./CSS/contacto.css">
 </head>
 <body>
     <header>
@@ -53,20 +54,25 @@
             <p>Envíos a todo el Perú.</p>
         </section>
 
-        <section class="my-5 text-center">
-            <h3 class="text-xl">Dirección:</h3>
-            <p>JR. Ancash Nro. 1640 D - Lima</p>
-            <div class="map-container">
-                <center><iframe
-                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7804.014812626143!2d-77.0149632!3d-12.0430108!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c8aa78afc39b%3A0xdf5ae0e57552ffc7!2sJr.%20%C3%81ncash%201640%2C%20Lima%2015003!5e0!3m2!1ses-419!2spe!4v1723584841684!5m2!1ses-419!2spe"
-                    width="400"
-                    height="300"
-                    style="border:0;"
-                    allowfullscreen=""
-                    loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade">
-                </iframe></center>
-            </div>
+        <section id="contacto" class="contacto">
+            <div class="container">
+                <h3 class="contacto-title">Contacto</h3>
+                <p class="contacto-description">Estamos aquí para ayudarte. ¡Comunícate con nosotros ahora!</p>
+                <button id="whatsappButton" class="btn btn-whatsapp" onclick="window.open('https://bit.ly/Tests14', '_blank')">
+                    <i class="fab fa-whatsapp"></i> Envíanos un mensaje
+                </button>
+                <div class="map-container">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7804.014812626143!2d-77.0149632!3d-12.0430108!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c8aa78afc39b%3A0xdf5ae0e57552ffc7!2sJr.%20%C3%81ncash%201640%2C%20Lima%2015003!5e0!3m2!1ses-419!2spe!4v1723584841684!5m2!1ses-419!2spe"
+                        width="400"
+                        height="300"
+                        style="border:0;"
+                        wallowfullscreen=""
+                        loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
+                </div>
+            </div>
         </section>
     </main>
 
