--- a/index.html
+++ b/index.html
@@ -105,10 +105,18 @@
         </div>
         <div class="footer-column">
             <br>
-            <p><strong>Metodos de Pago:</strong></p>
-            <img src="" alt="">
-            <img src="" alt="">
-            <br><br><br>
+            <center><p><strong>Metodos de Pago:</strong></p></center>
+            <br>
+            <div class="container metodo-pago-baner">
+                <div class="row align-items-center mb-5">
+                    <div class="col-md-6 text-center">
+                        <img src="./img/nuevoyape.jpg" alt="" class="metodo-pago">
+                    </div>
+                    <div class="col-md-6">
+                        <img src="./img/Plinimg.png" alt="" class="metodo-pago2">
+                    </div>
+                </div>
+            </div>
             <p>Síguenos en:</p>
             <a href="https://wa.me/51972114829" target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
             <a href="https://www.facebook.com/" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
@@ -120,5 +128,5 @@
     </div>
 </footer>
 <script src="https://kit.fontawesome.com/812c8ee19a.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
