--- a/index.html
+++ b/index.html
@@ -90,14 +90,13 @@
         </div>
     </div>
 </body>
-<footer>
+<footer class="footer-exagerado">
     <div class="footer-container">
-        <div class="footer-column">
-            <br><br>
+        <div class="footer-column logo-column">
             <h2>Marmolería "Señor de la divina Misericordia"</h2>
         </div>
-        <div class="footer-column">
-            <p><strong>Contactanos:</strong></p>
+        <div class="footer-column contacto-column">
+            <p><strong>Contáctanos:</strong></p>
             <p>Carmen Rosa Llanos<br>
             <a href="mailto:carmenrosallanoslopez@gmail.com">carmenrosallanoslopez@gmail.com</a><br>
             <strong>Cel:</strong> <a href="tel:+51972114829">972114829</a></p>
@@ -106,30 +105,26 @@
             <a href="mailto:karlhosyadhira@gmail.com">karlhosyadhira@gmail.com</a><br>
             <strong>Cel:</strong> <a href="tel:+51992144706">992144706</a></p>
         </div>
-        <div class="footer-column">
-            <br>
-            <center><p><strong>Metodos de Pago:</strong></p></center>
-            <br>
-            <div class="container metodo-pago-baner">
-                <div class="row align-items-center mb-5">
-                    <div class="col-md-6 text-center">
-                        <img src="./img/nuevoyape.jpg" alt="" class="metodo-pago">
-                    </div>
-                    <div class="col-md-6">
-                        <img src="./img/Plinimg.png" alt="" class="metodo-pago2">
-                    </div>
-                </div>
+        <div class="footer-column pago-column">
+            <p><strong>Métodos de Pago:</strong></p>
+            <div class="metodo-pago-container">
+                <img src="./img/nuevoyape.jpg" alt="Yape" class="metodo-pago">
+                <img src="./img/Plinimg.png" alt="Plin" class="metodo-pago">
             </div>
-            <p>Síguenos en:</p>
-            <a href="https://wa.me/51972114829" target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
-            <a href="https://www.facebook.com/" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-            <a href="tel:+51972114829" aria-label="Teléfono"><i class="fas fa-phone"></i></a>
+            <div class="social-icons">
+                <p>Síguenos en:</p>
+                <a href="https://wa.me/51972114829" target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://www.facebook.com/" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                <a href="tel:+51972114829" aria-label="Teléfono"><i class="fas fa-phone"></i></a>
+            </div>
         </div>
     </div>
+    
     <div class="footer-bottom">
         <p>© 2024 Marmolería "Señor de la divina Misericordia" - Todos los Derechos Reservados.</p>
     </div>
 </footer>
+
 <script src="https://kit.fontawesome.com/812c8ee19a.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
