--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </section>
 
     <div class="container contactanos">
-        <div class="row align-items-center mb-5">
+        <div class="row align-items-center mb-0">
             <div class="col-md-6 text-center">
                 <section id="contacto" class="contacto">
                     <div class="container">
@@ -106,7 +106,7 @@
             <strong>Cel:</strong> <a href="tel:+51992144706">992144706</a></p>
         </div>
         <div class="footer-column pago-column">
-            <p><strong>Métodos de Pago:</strong></p>
+            <center><p><strong>Métodos de Pago:</strong></p></center>
             <div class="metodo-pago-container">
                 <img src="./img/nuevoyape.jpg" alt="Yape" class="metodo-pago">
                 <img src="./img/Plinimg.png" alt="Plin" class="metodo-pago">
@@ -124,6 +124,7 @@
         <p>© 2024 Marmolería "Señor de la divina Misericordia" - Todos los Derechos Reservados.</p>
     </div>
 </footer>
+
 
 <script src="https://kit.fontawesome.com/812c8ee19a.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
