--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
             <nav>
                 <ul>
                     <li><a href="#inicio">Inicio</a></li>
-                    <li><a href="#servicios">Servicios</a></li>
-                    <li><a href="./catalogo.html">Galería</a></li>
+                    <li><a href="/catalog.html">Catalogo</a></li>
                     <li><a href="#contacto">Contacto</a></li>
                 </ul>
             </nav>
@@ -58,6 +57,54 @@
             </div>
         </div>
     </section>
+
+    <section class="servicios">
+        <div class="container">
+            <h2 class="section-title">Nuestros Servicios</h2>
+            <div class="rowservicio">
+                <div class="col-md-4">
+                    <div class="card-servicio">
+                        <h3>Confección de Lápidas</h3>
+                        <p>Creación de lápidas personalizadas con materiales de alta calidad.</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card-servicio">
+                        <h3>Tumbas</h3>
+                        <p>Diseño y construcción de tumbas con detalles y acabados excepcionales.</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card-servicio">
+                        <h3>Ovalines</h3>
+                        <p>Fabricación de ovalines para decoración y funcionalidad en el hogar.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card-servicio">
+                        <h3>Adornos</h3>
+                        <p>Adornos elegantes para lápidas y tumbas, hechos a medida.</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card-servicio">
+                        <h3>Mausoleos</h3>
+                        <p>Construcción de mausoleos con diseños exclusivos y personalizados.</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card-servicio">
+                        <h3>Tableros para Cocina</h3>
+                        <p>Tableros de mármol para cocinas, resistentes y de gran belleza.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+    <br>
 
     <div class="container contactanos">
         <div class="row align-items-center mb-0">
