--- a/catalog.html
+++ b/catalog.html
@@ -7,14 +7,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/CSS/navbar.css">
 </head>
 <body>
-    <header class="bg-dark text-white text-center p-3">
-        <h1>Catálogo de Confecciones</h1>
-        <nav>
-            <a href="index.html" class="text-white mx-3">Inicio</a>
-            <a href="catalog.html" class="text-white mx-3">Catálogo</a>
-        </nav>
+    <header>
+        <div class="container">
+            <h1>Marmolería</h1><br>
+            <h2 class="sub">"Señor de la divina Misericordia"</h2>
+            <br>
+            <nav>
+                <ul>
+                    <li><a href="/index.html">Inicio</a></li>
+                    <li><a href="/catalog.html">Catalogo</a></li>
+                    <li><a href="#contacto">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main class="container my-5">
