--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
     </section>
 
-    <section class="servicios">
+    <section class="services-section">
         <div class="containerservicio">
             <h2 class="section-title">Nuestros Servicios</h2>
             <div class="rowservicio">
@@ -100,8 +100,7 @@
             </div>
         </div>
     </section>
-    
-    <br>
+
 
     <div class="container contactanos">
         <div class="row align-items-center mb-0">
