--- a/catalog.html
+++ b/catalog.html
@@ -6,8 +6,9 @@
     <title>Catálogo - Señor de la Divina Misericordia</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="/CSS/navbar.css">
+    <link rel="stylesheet" href="/CSS/footer.css">
 </head>
 <body>
     <header>
@@ -41,10 +42,39 @@
         </section>
     </main>
 
-    <footer class="bg-gray-800 text-white text-center p-3">
-        <p>Propietarios: Carmen Rosa Llanos, Karlhos Torrejón</p>
-        <p>Correo: carmenrosallanoslopez@gmail.com | karlhosyadhira@gmail.com</p>
-        <p>Teléfonos: 972114829 | 992144706</p>
+    <footer class="footer-exagerado">
+        <div class="footer-container">
+            <div class="footer-column logo-column">
+                <h2>Marmolería "Señor de la divina Misericordia"</h2>
+            </div>
+            <div class="footer-column contacto-column">
+                <p><strong>Contáctanos:</strong></p>
+                <p>Carmen Rosa Llanos<br>
+                <a href="mailto:carmenrosallanoslopez@gmail.com">carmenrosallanoslopez@gmail.com</a><br>
+                <strong>Cel:</strong> <a href="tel:+51972114829">972114829</a></p>
+                
+                <p>Karlhos Torrejón<br>
+                <a href="mailto:karlhosyadhira@gmail.com">karlhosyadhira@gmail.com</a><br>
+                <strong>Cel:</strong> <a href="tel:+51992144706">992144706</a></p>
+            </div>
+            <div class="footer-column pago-column">
+                <center><p><strong>Métodos de Pago:</strong></p></center>
+                <div class="metodo-pago-container">
+                    <img src="./img/nuevoyape.jpg" alt="Yape" class="metodo-pago">
+                    <img src="./img/Plinimg.png" alt="Plin" class="metodo-pago">
+                </div>
+                <div class="social-icons">
+                    <p>Síguenos en:</p>
+                    <a href="https://wa.me/51972114829" target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+                    <a href="https://www.facebook.com/" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="tel:+51972114829" aria-label="Teléfono"><i class="fas fa-phone"></i></a>
+                </div>
+            </div>
+        </div>
+        
+        <div class="footer-bottom">
+            <p>© 2024 Marmolería "Señor de la divina Misericordia" - Todos los Derechos Reservados.</p>
+        </div>
     </footer>
 
     <script src="catalog.js"></script>
