--- a/catalog.html
+++ b/catalog.html
@@ -37,7 +37,7 @@
             </select>
         </section>
 
-        <section id="catalog-items" class="row">
+        <section id="catalog-items" class="row img-catalogo">
             <!-- Aquí se insertarán dinámicamente los ítems -->
         </section>
     </main>
