Separacion en js

--- a/catalog.html
+++ b/catalog.html
@@ -31,6 +31,10 @@
             <button data-filter="all">Todos</button>
             <button data-filter="lapida">Lápidas</button>
             <button data-filter="tumba">Tumbas</button>
+            <button data-filter="ovalin">Ovalines</button>
+            <button data-filter="adorno">Adornos</button>
+            <button data-filter="mousoleo">Mousoleos</button>
+            <button data-filter="cocina">Tableros para Cocina</button>
         </div>
     
         <div id="catalog-items" class="catalog-items">
