--- a/catalog.html
+++ b/catalog.html
@@ -36,7 +36,14 @@
         <div id="catalog-items" class="catalog-items">
             <!-- Los ítems del catálogo se generarán dinámicamente aquí -->
         </div>
+        <div id="imageModal" class="modal">
+            <span class="close">&times;</span>
+            <img class="modal-content" id="modalImage">
+            <div id="caption"></div>
+        </div>
     </div>
+    
+
     
 </body>
 <footer class="footer-exagerado">
