--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./CSS/footer.css">
     <link rel="stylesheet" href="./CSS/navbar.css">
     <link rel="stylesheet" href="./CSS/contacto.css">
+    <link rel="stylesheet" href="./CSS/carrusel.css">
 </head>
 <body>
     <header>
@@ -52,6 +53,51 @@
                 <h4>Visión:</h4>
                 <p>"Nuestra visión es ser la marmolería líder en la región, reconocida por nuestra excelencia en calidad, innovación y servicio al cliente. Queremos ser el proveedor preferido de piedra natural y artificial para arquitectos, constructores y propietarios de hogares, y contribuir a la creación de espacios únicos y sostenibles que reflejen la belleza y durabilidad de la piedra".</p>
             </div>
+        </div>
+    </section>
+
+    <section class="carousel-section">
+        <h2 class="section-title">Los Más Solicitados</h2>
+        <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/mas-vendidos/1.jpg" class="d-block" alt="Producto 1">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Producto 1</h5>
+                        <p>Descripción breve del producto 1.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/mas-vendidos/2.jpg" class="d-block" alt="Producto 2">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Producto 2</h5>
+                        <p>Descripción breve del producto 2.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/mas-vendidos/3.jpg" class="d-block" alt="Producto 3">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Producto 3</h5>
+                        <p>Descripción breve del producto 3.</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="img/mas-vendidos/4.jpg" class="d-block" alt="Producto 4">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Producto 4</h5>
+                        <p>Descripción breve del producto 4.</p>
+                    </div>
+                </div>
+            </div>
+
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
     </section>
 
