--- a/index.html
+++ b/index.html
@@ -56,36 +56,36 @@
         </div>
     </section>
 
-    <section class="carousel-section">
+    <section class="carousel-section mb-0">
         <h2 class="section-title">Los Más Solicitados</h2>
         <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="img/mas-vendidos/1.jpg" class="d-block" alt="Producto 1">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Producto 1</h5>
-                        <p>Descripción breve del producto 1.</p>
+                        <h5>Lapida</h5>
+                        <a href="catalog.html">Ver mas en nuestro catalogo</a>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="img/mas-vendidos/2.jpg" class="d-block" alt="Producto 2">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Producto 2</h5>
-                        <p>Descripción breve del producto 2.</p>
+                        <h5>Lapida</h5>
+                        <a href="catalog.html">Ver mas en nuestro catalogo</a>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="img/mas-vendidos/3.jpg" class="d-block" alt="Producto 3">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Producto 3</h5>
-                        <p>Descripción breve del producto 3.</p>
+                        <h5>Lapida</h5>
+                        <a href="catalog.html">Ver mas en nuestro catalogo</a>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="img/mas-vendidos/4.jpg" class="d-block" alt="Producto 4">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Producto 4</h5>
-                        <p>Descripción breve del producto 4.</p>
+                        <h5>Tumba</h5>
+                        <a href="catalog.html">Ver mas en nuestro catalogo</a>
                     </div>
                 </div>
             </div>
