--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./CSS/navbar.css">
     <link rel="stylesheet" href="./CSS/contacto.css">
     <link rel="stylesheet" href="./CSS/carrusel.css">
+    <link rel="icon" href="./img/Logo.png">
 </head>
 <body>
     <header>
