--- a/catalog.html
+++ b/catalog.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="/CSS/navbar.css">
     <link rel="stylesheet" href="/CSS/footer.css">
+    <link rel="stylesheet" href="/CSS/contacto.css">
+    <link rel="icon" href="./img/Logo.png">
 </head>
 <body>
     <header>
@@ -20,7 +22,6 @@
                 <ul>
                     <li><a href="/index.html">Inicio</a></li>
                     <li><a href="/catalog.html">Catalogo</a></li>
-                    <li><a href="#contacto">Contacto</a></li>
                 </ul>
             </nav>
         </div>
@@ -45,8 +46,6 @@
             <div id="caption"></div>
         </div>
     </div>
-    
-
     
 </body>
 <footer class="footer-exagerado">
