--- a/catalog.html
+++ b/catalog.html
@@ -20,7 +20,7 @@
             <br>
             <nav>
                 <ul>
-                    <li><a href="/index.html">Inicio</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="/catalog.html">Catalogo</a></li>
                 </ul>
             </nav>
