--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="hero-overlay">
             <h2 class="hero-title">Bienvenidos a Nuestra Marmolería</h2>
             <p class="hero-subtitle">Confección de lápidas, tumbas, ovalines, adornos, mausoleos, tableros para cocina en mármoles nacionales e importados.</p>
-            <p class="hero-subtitle">Envíos a todo el Perú.</p>
+            <p class="hero-subtitle">Envíos a todo el Perú</p>
         </div>
     </section>
     
@@ -46,7 +46,7 @@
             </div>
             <div class="col-md-6 text-mejorado">
                 <h3 class="text-xl">Quiénes somos</h3>
-                <p>Somos un equipo de profesionales apasionados y expertos en el sector, comprometidos a brindar soluciones personalizadas y de alta calidad para satisfacer las necesidades de nuestros clientes. Nos enfocamos en la atención al detalle, la innovación y el respeto por el medio ambiente.</p>
+                <p>Somos un equipo de profesionales apasionados y expertos en el sector, comprometidos a brindar soluciones personalizadas y de alta calidad para satisfacer las necesidades de nuestros clientes.</p>
     
                 <h4>Misión:</h4>
                 <p>"Nuestra misión es ofrecer piedra natural y artificial de alta calidad, con diseños innovadores y personalizados, para satisfacer las necesidades de nuestros clientes en proyectos de construcción, remodelación y decoración. Nos comprometemos a brindar un servicio excepcional, con atención al detalle y respeto por el medio ambiente".</p>
@@ -156,7 +156,7 @@
                     <div class="container">
                         <h3 class="contacto-title">Contacto</h3>
                         <p class="contacto-description">Estamos aquí para ayudarte. ¡Comunícate con nosotros ahora!</p>
-                        <button id="whatsappButton" class="btn btn-whatsapp" onclick="window.open('https://bit.ly/Tests14', '_blank')">
+                        <button id="whatsappButton" class="btn btn-whatsapp" onclick="window.open('https://bit.ly/señordeladivinamisericordia', '_blank')">
                             <i class="fab fa-whatsapp"></i> Envíanos un mensaje
                         </button>
                     </div>
