--- a/index.html
+++ b/index.html
@@ -165,15 +165,14 @@
             <div class="col-md-6">
                 <section class="my-5 text-center">
                     <div class="map-container">
-                        <center><iframe
-                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7804.014812626143!2d-77.0149632!3d-12.0430108!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c8aa78afc39b%3A0xdf5ae0e57552ffc7!2sJr.%20%C3%81ncash%201640%2C%20Lima%2015003!5e0!3m2!1ses-419!2spe!4v1723584841684!5m2!1ses-419!2spe"
-                            width="400"
-                            height="300"
-                            style="border:0;"
-                            allowfullscreen=""
-                            loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade">
-                        </iframe></center>
+                        <center><iframe 
+                            src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3901.997854761227!2d-77.01241002493894!3d-12.043668188192868!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTLCsDAyJzM3LjIiUyA3N8KwMDAnMzUuNCJX!5e0!3m2!1ses-419!2spe!4v1726585783440!5m2!1ses-419!2spe" 
+                            width="400" 
+                            height="300" 
+                            style="border:0;" 
+                            allowfullscreen="" 
+                            loading="lazy" 
+                            referrerpolicy="no-referrer-when-downgrade"></iframe></center>
                     </div>
                 </section>
             </div>
